--- a/src/pages/SurveyComplete.css
+++ b/src/pages/SurveyComplete.css
@@ -8,10 +8,6 @@
     padding-right: 20vw;
 }
 
-.paragraph-head {
-    /* font-size: 14px; */
-}
-
 .divider-line {
     height: 1vh;
     width: 10vw;
